kubernetes/base/object-store.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: object-store
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: object-store
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: object-store
  labels:
    service: object-store
spec:
  selector:
    k8s-app: object-store
  type: ClusterIP
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: object-store
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: object-store
  template:
    metadata:
      labels:
        k8s-app: object-store
    spec:
      containers:
      - name: object-store
        image: waggle/sage-object-store:latest
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        imagePullPolicy: Always
      restartPolicy: Always
